[tool.poetry]
name = "gpt-engineer-streamlit-app"
version = "0.1.0"
description = "A template langchain Streamlit App with Docker"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_streamlit_docker_template"}]


[tool.poetry.dependencies]
python = "3.10.9"
streamlit = "^1.22.0"
pandas = "1.3.5"
data-analyzer = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
